[metadata]
name = hydrography
summary = mapping the Quebec hydrograohy data
description-file =
    README.rst
author = Marc Methot
author-email = mb.methot@gmail.com
home-page = tbfo
classifier =
    Environment :: hydrology
    Intended Audience :: Information Technology
    License :: GNU General Public License v3.0
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

